# linexin-upgrade-tool

./: PKGBUILD  README.md  linexin-upgrade-tool-1.0.0.r-1-x86_64.pkg.tar.zst  linexin-upgrade-tool.install  pyproject.toml
pkg/linexin-upgrade-tool/: .BUILDINFO  .MTREE  .PKGINFO
pkg/linexin-upgrade-tool/usr/share/applications/: github.petexy.linexinupgradetool.desktop
pkg/linexin-upgrade-tool/usr/share/linexin-upgrade-tool/: finish_widget.py  linexin_center_style_picker_widget.py
pkg/linexin-upgrade-tool/usr/share/linexin-upgrade-tool/translations/: de_DE.py  es_ES.py  fr_FR.py  hi_IN.py  pl_PL.py  pt_BR.py  ru_RU.py  zh_CN.py
src/usr/share/applications/: github.petexy.linexininstaller.desktop  github.petexy.linexinupgradetool.desktop
src/usr/share/linexin-upgrade-tool/: autostart_wrapper.sh  bootloader.sh  de_selection_widget.py  finish_widget.py  install_new_apps_widget.py  installation_widget.py  linexin_center_style_picker_widget.py  news_widget.py  os-release  post-install.sh  remove_gpu.sh  simple_localization_manager.py  update1_slide1.py  update1_slide2.py  update2_slide1.py  update3_slide1.py  upgrader  welcome_widget.py
src/usr/share/linexin-upgrade-tool/translations/: de_DE.py  en_CA.py  en_GB.py  en_US.py  es_ES.py  fr_FR.py  hi_IN.py  pl_PL.py  pt_BR.py  pt_PT.py  ru_RU.py  zh_CN.py
