[project]
name = "linexin-upgrade-tool"
version = "3.0.4"
description = "Linexin Operating System Upgrader"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Petexy"},
]
dependencies = [
    "PyGObject",
]

[project.urls]
Homepage = "https://github.com/Petexy/linexin-upgrade-tool"
Repository = "https://github.com/Petexy/linexin-upgrade-tool"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
